--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #custom files to ignore
 .DS_Store
 config.py
-#road-traffic-injuries-2002-2010.csv
+road-traffic-injuries-2002-2010.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
